# Aetheris_UI

./: .coverage  .gitignore  .implementation_plan_v2.md  AETHERIS_AUDIT.md  Dockerfile  Dockerfile.m1-dev  LICENSE  MANIFEST.in  MEJORAS.md  README.md  README_ES.md  README_PT.md  aetherisUI-desarrollo-inicial.md  app_server.py  debug_compiler.py  docker-compose.yml  main.py  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  serve_wasm.py  session6_aetheris_UI.md  setup.py  vite.config.mjs
.github/workflows/: ci.yml  publish-pypi.yml
aetheris-rust/: Cargo.toml  README.md
aetheris-rust/crates/aether-core/: Cargo.toml
aetheris-rust/crates/aether-core/src/: elements.rs  engine.rs  gpu_compute_node.rs  input_manager.rs  lib.rs  solver.rs  state_manager.rs
aetheris-rust/crates/aether-pyo3/: Cargo.toml
aetheris-rust/crates/aether-pyo3/src/: lib.rs
benchmarks/: gpu_vs_cpu.py
core/: aether_math.py  audio_bridge.py  components.py  data_bridge.py  declarative_api.py  dynamic_limits.py  elements.py  engine.py  engine_selector.py  gl_renderer.py  headless_bridge.py  hpc_solver.py  html_parser.py  input_manager.py  json_utils.py  kivy_renderer.py  mario_web.py  pooling.py  protocols.py  py.typed  solver.py  solver_batch_asymptotes.py  solver_bridge.py  solver_wasm.py  state_manager.py  tensor_compiler.py  theme_manager.py  tkinter_renderer.py  types_stubs.pyi  types_typeddict.py  ui_builder.py  web_app.py  web_bridge.py  web_elements.py  web_server.py
core/__pycache__/: solver.calculate_boundary_forces-17.py312.1.nbc  solver.calculate_boundary_forces-17.py312.2.nbc  solver.calculate_boundary_forces-17.py312.nbi  solver.calculate_boundary_forces-50.py312.1.nbc  solver.calculate_boundary_forces-50.py312.2.nbc  solver.calculate_boundary_forces-50.py312.nbi  solver.calculate_boundary_forces-56.py312.1.nbc  solver.calculate_boundary_forces-56.py312.2.nbc  solver.calculate_boundary_forces-56.py312.nbi  solver.calculate_boundary_forces-61.py312.1.nbc  solver.calculate_boundary_forces-61.py312.2.nbc  solver.calculate_boundary_forces-61.py312.nbi  solver.calculate_restoring_force-34.py312.1.nbc  (+21 more)
demo/: dashboard_config.json  demo_aether_orrery.py  demo_aether_stock.py  demo_all_components.py  demo_data_forge.py  demo_enterprise_dashboard.py  demo_html_layout.py  demo_json_dashboard.py  demo_mobile_maze.py  fraud.db  fraud_data_gen.py  fraud_viz.py  gestne_clusters.py  gestne_data.json  gestne_loader.py  launch_gestne_web.py  odyssey.db  odyssey_master.py  sample_data.csv
docs/: AETHERIS_PRO_VISION_ES.md  API_REFERENCE.md  API_REFERENCE_ES.md  API_REFERENCE_PT.md  API_REFERENCE_V2.md  ARCHITECTURE.md  ARCHITECTURE_ES.md  ARCHITECTURE_PT.md  FAST_DEPLOY.md  FUTURE_PROPOSALS_ES.md  LIFECYCLE_GUIDE.md  M1_WASM_LIGHTWEIGHT.md  MARKET_STUDY.md  MEJORAS_COMPLETAS.md  OFFICIAL_DOCS.md  PLAN_M5_M6.md  PLAN_MEJORAS.md  PROJECT_STATUS.md  QUICKSTART.md  USE_CASES.md  analisis_potencial_completo.md  conf.py  index.rst  plan_mejora_1_08_04_2026.md
errores_encontrados/: reporte_errores.md
release_v1/: Dockerfile  README.md  README_ES.md  README_PT.md  RELEASE_MANIFEST.txt  aether_disk_analyzer.py  app_server.py  demo_tkinter_optimized.py  main.py  pyproject.toml  requirements.txt  super_aetheris_bros.py  super_aetheris_bros_kivy.py
release_v1/core/: __init__.py  aether_math.py  data_bridge.py  elements.py  engine.py  gl_renderer.py  input_manager.py  kivy_renderer.py  renderer_base.py  solver.py  solver_bridge.py  solver_wasm.py  state_manager.py  tensor_compiler.py  tkinter_renderer.py  ui_builder.py
release_v1/demo/: odyssey.db  odyssey_db.py  odyssey_master.py
release_v1/docs/: API_REFERENCE_ES.md  ARCHITECTURE.md  ARCHITECTURE_ES.md  ARCHITECTURE_PT.md  WASM_PORTABILITY.md
release_v1/scripts/: prepare_release.py
release_v1/templates/: odyssey.html
release_v1/tests/: test_data_bridge.py  test_elements.py  test_engine.py  test_physics.py  test_renderer.py  test_teleportation.py  test_wasm_compatibility.py
release_v1/wasm/: index.html  pyodide_setup.js
scripts/: prepare_release.py
static/: manifest.json  sw.js
templates/: fraud.html  index.html  mario.html  odyssey.html  project_template.py
tests/: fps_capacity_test.py  test_aether_math.py  test_audio_logic.py  test_components.py  test_data_forge.py  test_declarative_api.py  test_defensive.py  test_demo_mobile_maze.py  test_demo_orrery.py  test_engine.py  test_engine_parity.py  test_flet_architecture.py  test_framework_integrado_ataque.py  test_full_system_v1_enhanced.py  test_general_integration.py  test_headless_bridge.py  test_hpc_concurrency.py  test_html_integration.py  test_html_parser.py  test_input_bridge.py  test_issue3_zero_allocation.py  test_json_utils.py  test_json_utils_stress.py  test_light_wasm.py  test_m15_m8_integration.py  test_m15_themes.py  test_m16_edge_cases.py  test_m16_sleep_engine.py  test_m1_estres.py  test_m1_unitarios.py  test_m2_ataques.py  test_m2_batch_asymptotes.py  test_m2_unitarios.py  test_m5_layout.py  test_m6_lifecycle.py  test_m8_type_hints.py  test_new_features.py  test_parallel_scaling.py  test_performance_gatekeeper.py  test_physics_parity.py  (+8 more)
tests_stress/: test_iron_mountain.py  test_titan_stress.py
wasm/: aether_bridge.js  index.html  light_wasm_adapter.py
(+62 files in other folders)
