[package]
name = "aether-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Physics engine core for Aetheris UI"

[dependencies]
aether-math = { path = "../aether-math" }
rayon = "1.10"
serde_json = "1.0"
wgpu = "22.1"
pollster = "0.3"
bytemuck = { version = "1.16", features = ["derive"] }
